tests/ui/implied-bounds/cve-rs-lifetime-expansion.stderr
error: higher-ranked subtype error
  --> $DIR/cve-rs-lifetime-expansion.rs:15:44
   |
LL |     let f: for<'x> fn(_, &'x T) -> &'b T = lifetime_translator;
   |                                            ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

